tests/error/class_inside.gw
#! [contains] recursive type
class c {
  var c myvar;
}
